span in footer fixed

--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,51 +1,49 @@
 <section class="section" id="home">
   <div class="container home-wrp">
-    
-      <picture class="img-warrior">
-        <!--desktop-->
-        <source
-          srcset="
-            /img/home/p.png   1x,
-            /img/home/p@2.png 2x
-          "
-          media="(min-width: 1200px)"
-        />
+    <picture class="img-warrior">
+      <!--desktop-->
+      <source
+        srcset="/img/home/p.png 1x, /img/home/p@2.png 2x"
+        media="(min-width: 1200px)"
+      />
 
-        <!--mobile -->
-        <source
-          srcset="
-            /img/home/main-picture-mobile.png   1x,
-            /img/home/main-picture-mobile@2.png 2x"
-          media="(max-width: 1199px)"
-        />
+      <!--mobile -->
+      <source
+        srcset="
+          /img/home/main-picture-mobile.png   1x,
+          /img/home/main-picture-mobile@2.png 2x
+        "
+        media="(max-width: 1199px)"
+      />
 
-        <!--Fallback-->
-        <img
-          
-          src="/img/home/main-picture-mobile.png"
-          alt="Epic warrior"
-          loading="lazy"
-          width="auto"
-          height="auto"
-        />
-      </picture>
+      <!--Fallback-->
+      <img
+        src="/img/home/main-picture-mobile.png"
+        alt="Epic warrior"
+        loading="lazy"
+        width="auto"
+        height="auto"
+      />
+    </picture>
 
-      <div class="home-content-wrp">
-        <h1 class="home-tittle">
-          Dynasty: Fallen & Rise – Reclaim the Throne, Rewrite History!
-        </h1>
-        <p class="home-descr">
-          Lead your kingdom through betrayal, war, and glory in this epic strategy
-          RPG!
-        </p>
-        <a class="home-download" href="https://play.google.com/store/apps/details?id=com.xmsgnew.sgn&hl=en&gl=us" target="_blank"> 
-          <svg class="play-icon" width="14" height="16">
-            <use href="/img/sprite.svg#icon-google-play-icon"></use>
-          </svg>
-            <span>Download on Google Play</span>
-            
-        </a>
-      </div>
+    <div class="home-content-wrp">
+      <h1 class="home-tittle">
+        Dynasty: Fallen & Rise – Reclaim the Throne, Rewrite History!
+      </h1>
+      <p class="home-descr">
+        Lead your kingdom through betrayal, war, and glory in this epic strategy
+        RPG!
+      </p>
+      <a
+        class="home-download"
+        href="https://play.google.com/store/apps/details?id=com.xmsgnew.sgn&hl=en&gl=us"
+        target="_blank"
+      >
+        <svg class="play-icon" width="14" height="16">
+          <use href="/img/sprite.svg#icon-google-play-icon"></use>
+        </svg>
+        <span>Download on Google Play</span>
+      </a>
     </div>
   </div>
 </section>
