Fixed little problems

--- a/src/partials/call-to-action.html
+++ b/src/partials/call-to-action.html
@@ -36,7 +36,11 @@
             Download Dynasty: Fallen & Rise and Forge Your Path to Glory!
           </h3>
         </div>
-        <a class="cta-download" href="#">
+        <a
+          class="cta-download"
+          href="https://play.google.com/store/apps/details?id=com.xmsgnew.sgn&hl=en&gl=us"
+          target="_blank"
+        >
           <svg class="burger-icon" width="14" height="16">
             <use href="/img/sprite.svg#icon-google-play-icon"></use>
           </svg>
