--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,21 +3,15 @@
     <div class="footer-nav-wrapper">
       <ul class="footer-nav">
         <li class="footer-desc">
-          <a class="footer-link" href="./privacy.html" target="_blank"
-            >Privacy Policy /
-          </a>
+          <a class="footer-link" href="./privacy.html">Privacy Policy / </a>
         </li>
 
         <li class="footer-desc">
-          <a class="footer-link" href="./terms.html" target="_blank"
-            >Terms & Conditions /
-          </a>
+          <a class="footer-link" href="./terms.html">Terms & Conditions / </a>
         </li>
 
         <li class="footer-desc">
-          <a class="footer-link" href="./cookies.html" target="_blank"
-            >Cookies Policy</a
-          >
+          <a class="footer-link" href="./cookies.html">Cookies Policy</a>
         </li>
       </ul>
     </div>
