--- a/src/partials/characters.html
+++ b/src/partials/characters.html
@@ -3,7 +3,7 @@
     <h2 class="char-title">Main characters</h2>
     <ul class="char-list">
       <li class="char-item">
-        <picture class="char-img" data-aos="zoom-in-down">
+        <picture class="char-img" data-aos="zoom-in-right">
           <!--desktop-->
           <source
             srcset="
@@ -27,8 +27,8 @@
             src="/img/characters/kairos-picture-mobile.png"
             alt="General Kairos"
             loading="lazy"
-            width="auto"
-            height="auto"
+            width="197"
+            height="193"
           />
         </picture>
         <h3 class="char-item-title">General Kairos</h3>
@@ -61,8 +61,8 @@
             src="/img/characters/lady-picture-mobile.png"
             alt="Lady An-Mei"
             loading="lazy"
-            width="auto"
-            height="auto"
+            width="197"
+            height="193"
           />
         </picture>
         <h3 class="char-item-title">Lady An-Mei</h3>
@@ -71,7 +71,7 @@
         </p>
       </li>
       <li class="char-item">
-        <picture class="char-img" data-aos="zoom-in-down">
+        <picture class="char-img" data-aos="zoom-in-left">
           <!--desktop-->
           <source
             srcset="
@@ -95,8 +95,8 @@
             src="/img/characters/shen-picture-mobile.png"
             alt="Master Shen"
             loading="lazy"
-            width="auto"
-            height="auto"
+            width="197"
+            height="193"
           />
         </picture>
         <h3 class="char-item-title">Master Shen</h3>
@@ -105,7 +105,7 @@
         </p>
       </li>
       <li class="char-item">
-        <picture class="char-img" data-aos="zoom-in-down">
+        <picture class="char-img" data-aos="zoom-in-right">
           <!--desktop-->
           <source
             srcset="
@@ -129,8 +129,8 @@
             src="/img/characters/riku-picture-mobile.png"
             alt="Prince Riku"
             loading="lazy"
-            width="auto"
-            height="auto"
+            width="197"
+            height="193"
           />
         </picture>
         <h3 class="char-item-title">Prince Riku</h3>
@@ -139,7 +139,7 @@
         </p>
       </li>
       <li class="char-item wide-card">
-        <picture class="char-img" data-aos="zoom-in-down">
+        <picture class="char-img" data-aos="zoom-in-left">
           <!--desktop-->
           <source
             srcset="
@@ -163,8 +163,8 @@
             src="/img/characters/exile-picture-mobile.png"
             alt="The Empress in Exile"
             loading="lazy"
-            width="auto"
-            height="auto"
+            width="197"
+            height="193"
           />
         </picture>
         <h3 class="char-item-title">The Empress in Exile</h3>
